# ChangeLog for sci-libs/openblas
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Feb 2014; Mark Wright <gienah@gentoo.org> openblas-9999.ebuild:
  Thanks to sfabbro: dodoc should be outside the function, they do not change

  18 Feb 2014; Mark Wright <gienah@gentoo.org> openblas-9999.ebuild:
  multibuild openblas when USE=int64 is specified.

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> openblas-9999.ebuild,
  metadata.xml:
  Switch from git-2 to git-r3

*openblas-0.2.8 (06 Aug 2013)

  06 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> +openblas-0.2.8.ebuild,
  -openblas-0.2.7.ebuild, openblas-9999.ebuild:
  sci-libs/openblas: Version bump

*openblas-0.2.7 (24 Jul 2013)

  24 Jul 2013; Sébastien Fabbro <bicatali@gentoo.org> +openblas-0.2.7.ebuild,
  -files/openblas-aliasing.patch, -files/openblas-sharedlibs-0.2.patch,
  -openblas-0.2.6.ebuild, metadata.xml, openblas-9999.ebuild:
  sci-libs/openblas: Version bump. Rewrote ebuild to try to follow upstream
  closer

*openblas-0.2.6 (03 Mar 2013)

  03 Mar 2013; Sébastien Fabbro <bicatali@gentoo.org> +openblas-0.2.6.ebuild,
  -openblas-0.2.5.ebuild, openblas-9999.ebuild:
  sci-libs/openblas: Version bump

  25 Feb 2013; Sébastien Fabbro <bicatali@gentoo.org> openblas-9999.ebuild:
  sci-libs/openblas: Move threads to Libs.private in pc file

*openblas-0.2.5 (12 Dec 2012)

  12 Dec 2012; Sébastien Fabbro <bicatali@gentoo.org> +openblas-0.2.5.ebuild,
  -openblas-0.2.2.ebuild, -openblas-0.2.3.ebuild, -openblas-0.2.4-r1.ebuild,
  -openblas-0.2.4.ebuild, openblas-9999.ebuild:
  sci-libs/openblas: Version bump. Link latest version to live one

*openblas-0.2.4-r1 (15 Oct 2012)

  15 Oct 2012; Andrea Arteaga <spiros@gentoo.com> +openblas-0.2.4-r1.ebuild:
  Solved problem with fetching


*openblas-0.2.4 (08 Oct 2012)

  08 Oct 2012; Andrea Arteaga <andyspiros@gmail.com> +openblas-0.2.4.ebuild:
  Version bump

*openblas-0.2.3 (20 Aug 2012)
